--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @album.name %>'s Album Page</h1>
+<h1><%= @album.name %></h1>
 <% unless @tracks.empty? %>
   <h3>Tracks (<%= @tracks.length %>)</h3>
   <ol>
@@ -8,7 +8,9 @@
   </ol>
 <% end %>
 
-<%= link_to "Recorded by #{@album.band.name}", band_url(@album.band_id) %>
+Recorded by <%= link_to "#{@album.band.name}", band_url(@album.band_id) %>.
 <br>
-<%= link_to "Add a Track", new_album_track_url(@album) %><br>
-<%= link_to "Edit Album", edit_album_path(@album) %>
+<% if current_user.admin %>
+  <%= link_to "Add a Track", new_album_track_url(@album) %><br>
+  <%= link_to "Edit Album", edit_album_path(@album) %>
+<% end %>
