--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,9 +1,13 @@
 <h2>All Bands</h2>
+<% if logged_in? %>
+  <h2>Hello <%= current_user.email %></h2>
+<% end %>
+
 <% unless @bands.empty? %>
   <ul>
     <% @bands.each do |band| %>
-      <li><%= link_to band.name, band_url(band) %> | 
-              Albums: <%= band.albums.length %></li>
+      <li><%= link_to band.name, band_url(band) %> 
+              (<%= band.albums.length %> albums) </li>
     <% end %> 
   </ul>
 <% end %>
