--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,8 +1,8 @@
 <%= note.body %>
 <br>
-<small>Written by <%= note.user.email %> 
+<small>Posted by <%= note.user.email %> 
 <%= time_ago_in_words(note.created_at) %> ago.</small><br>
-<% if current_user.id == note.user_id %>
+<% if current_user.id == note.user_id || current_user.admin %>
   <%= button_to "Delete Note", note_path(note), method: :delete %>
 <% end %>
 <br>
