--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @track.name %>'s Track Page!</h2>
+<h2><%= @track.name %></h2>
 <p>
   <h3>Lyrics:</h3> 
   <%= ugly_lyrics(@track.lyrics) %>
@@ -11,6 +11,8 @@
 <%= render 'notes/form', track_id: @track.id %>
 
 <p>
-  From the album <%= link_to @track.album.name, album_url(@track.album_id) %>
+  From the album <%= link_to @track.album.name, album_url(@track.album_id) %>.
 </p>
-<%= link_to "Edit Track", edit_track_url(@track) %>
+<% if current_user.admin %>
+  <%= link_to "Edit Track", edit_track_url(@track) %>
+<% end %>
