--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,4 +15,5 @@
   <br>
   <input type="submit" value="Sign Up">
 </form>
-
+<br>
+Don't have an account? <%= link_to "Sign in here", new_session_url %>. 
